external-crates/move/crates/move-compiler/tests/move_2024/parser/enum_invalid_2.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/enum_invalid_2.move:3:13
  │
3 │        Done(x: u64),
  │             ^ Cannot use named fields here

